# dna_to_text

./: .gitignore  .gitmodules  README.md  findings.md  framework.md  new_findings.md  next_steps.md  pooling.txt  presentation.md  project.md  pyproject.toml  submission.md  writeup.md
analysis/: manifest.json
data/: binary_tf_vs_gpcr.json  binary_tf_vs_kinase.json  bootstrap_metrics.json  confusion_5way_dnabert2.json  confusion_5way_dnabert2_clsmean.json  confusion_5way_dnabert2_maxmean.json  confusion_5way_dnabert2_meanD.json  confusion_5way_dnabert2_meanG.json  confusion_5way_dnabert2_meanmean.json  confusion_5way_dnabert2_specialmean.json  confusion_5way_enformer_tracks_center.json  confusion_5way_enformer_trunk_center.json  confusion_5way_enformer_trunk_global.json  confusion_5way_enformer_tss_4mer.json  confusion_5way_gena_lm_clsmean.json  confusion_5way_gena_lm_maxmean.json  confusion_5way_gena_lm_meanD.json  confusion_5way_gena_lm_meanG.json  confusion_5way_gena_lm_meanmean.json  confusion_5way_gena_lm_specialmean.json  confusion_5way_hyena_dna_clsmean.json  confusion_5way_hyena_dna_maxmean.json  confusion_5way_hyena_dna_meanD.json  confusion_5way_hyena_dna_meanG.json  confusion_5way_hyena_dna_meanmean.json  confusion_5way_hyena_dna_specialmean.json  confusion_5way_nt_v2.json  confusion_5way_nt_v2_clsmean.json  confusion_5way_nt_v2_maxmean.json  confusion_5way_nt_v2_meanD.json  confusion_5way_nt_v2_meanG.json  confusion_5way_nt_v2_meanmean.json  confusion_5way_nt_v2_specialmean.json  confusion_5way_tss_dnabert2_clsmean.json  confusion_5way_tss_dnabert2_meanD.json  (+36 more)
(+132 files in other folders)
