[project]
name = "dna_to_text"
version = "0.1.0"
description = "Cross-modal alignment between DNABERT-2 and GenePT embedding spaces"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40",
    "torch>=2.2",
    "requests>=2.31",
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26",
    "tqdm>=4.66",
    "einops>=0.7",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "matplotlib>=3.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
